--- a/spendly/src/main/resources/templates/login.html
+++ b/spendly/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
+        <h1>Login diocane</h1>
         <form method="post" action="/login">
             <div class="input-group">
                 <label for="username">Username</label>
