--- a/spendly/src/main/resources/templates/login.html
+++ b/spendly/src/main/resources/templates/login.html
@@ -1,26 +1,87 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/login.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Login diocane</h1>
-        <form method="post" action="/login">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+				xmlns:sec="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Best Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    
+    <div class="container py-5">
+      <div class="mx-auto rounded border p-4" style="width: 400px">
+        <h2 class="text-center mb-4">Login</h2>
+        <hr />
+        
+        
+        <div th:if="${param.error}" 
+            		class="alert alert-danger alert-dismissible fade show" role="alert">
+            	
+			    <strong>Invalid Email or Password!</strong>
+			    <button type="button" class="btn-close" data-bs-dismiss="alert" 
+			  		aria-label="Close"></button>
+		</div>
+        
+        <form method="post">
+        	<input type="hidden" th:name="${_csrf.parameterName}" 
+            		th:value="${_csrf.token}" />
+            	
+            	
+            <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input class="form-control" name="email" />
             </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+
+            <div class="mb-3">
+                <label class="form-label">Password</label>
+                <input class="form-control" type="password" name="password" />
             </div>
-            <button type="submit">Accedi</button>
-            <a href="#" class="forgot-password">Hai dimenticato la password?</a>
+
+            <div class="row mb-3">
+                <div class="col d-grid">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                <div class="col d-grid">
+                    <a href="/" class="btn btn-outline-primary">Cancel</a>
+                </div>
+            </div>
         </form>
+      </div>
     </div>
-</body>
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
