CreaCosto va con boostrap

--- a/spendly/src/main/resources/templates/listboot.html
+++ b/spendly/src/main/resources/templates/listboot.html
@@ -20,7 +20,8 @@
           </div>
 
           <div class="mb-3 text-center">
-            <a href="/cost/new" class="btn btn-primary">Add New Cost</a>
+            <a href="/costs/new">Aggiungi Nuova Spesa</a>
+            <a href="/costs/new" class="btn btn-primary">Add New Cost</a>
           </div>
 
           <!-- Cost Table -->
@@ -41,8 +42,8 @@
                 <td th:text="${cost.date}"></td>
                 <td th:text="${cost.type}"></td>
                 <td>
-                  <a th:href="@{/cost/edit/{id}(id=${cost.id})}" class="btn btn-warning btn-sm">Edit</a>
-                  <a th:href="@{/cost/delete/{id}(id=${cost.id})}" class="btn btn-danger btn-sm">Delete</a>
+                  <a th:href="@{/costs/edit/{id}(id=${cost.id})}" class="btn btn-warning btn-sm">Edit</a>
+                  <a th:href="@{/costs/delete/{id}(id=${cost.id})}" class="btn btn-danger btn-sm">Delete</a>
                 </td>
               </tr>
             </tbody>
