-Rifunge ma non salva

--- a/spendly/src/main/resources/templates/form.html
+++ b/spendly/src/main/resources/templates/form.html
@@ -27,7 +27,7 @@
         </select><br>
 
         <button type="submit">Salva</button>
-        <a href="/costs">Annulla</a>
+        <a href="/costs/new">Annulla</a>
     </form>
 </body>
 </html>
