--- a/spendly/src/main/resources/templates/gestione-gruppi.html
+++ b/spendly/src/main/resources/templates/gestione-gruppi.html
@@ -67,6 +67,13 @@
             <i class="fas fa-plus"></i> Crea Gruppo
         </button>
 
+        <a href="/creaGruppo" class="btn btn-primary">
+            <i class="fas fa-plus"></i> Crea Gruppo 2
+        </a>
+        
+        
+
+
         <!-- Modale per Creare un Gruppo -->
         <div class="modal fade" id="createGroupModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
             <div class="modal-dialog">
