--- a/spendly/src/main/resources/templates/listboot.html
+++ b/spendly/src/main/resources/templates/listboot.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lista Spese</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container py-5">
@@ -18,7 +18,6 @@
             <tr>
               <th>ID</th>
               <th>Importo</th>
-              <th>Data</th>
               <th>Tipologia</th>
               <th>Gruppo</th>
               <th>Utente</th>
@@ -29,7 +28,6 @@
             <tr th:each="cost : ${costs}">
               <td th:text="${cost.costId}"></td>
               <td th:text="${cost.importo}"></td>
-              <td th:text="${cost.data}"></td>
               <td th:text="${cost.tipologia}"></td>
               <td th:text="${cost.group.nome}"></td>
               <td th:text="${cost.user.firstName} + ' ' + ${cost.user.lastName}"></td>
