-Piccole correzioni Views

--- a/spendly/src/main/resources/templates/dashboard.html
+++ b/spendly/src/main/resources/templates/dashboard.html
@@ -62,6 +62,18 @@
                 <li><a class="dropdown-item" href="/gestione-gruppi">Visualizza Gruppi</a></li>
             </ul>
         </div>
+        <div class="dropdown">
+            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-users"></i> Gestione Gruppi Statico</a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/groups">Visualizza Gruppi</a></li>
+            </ul>
+        </div>
+        <div class="dropdown">
+            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-users"></i> Gestione Spese Statico</a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/costs">Visualizza Spese</a></li>
+            </ul>
+        </div>
         <a href="#"><i class="fas fa-question-circle"></i> Aiuto</a>
     </div>
 
