--- a/spendly/src/main/resources/templates/listboot.html
+++ b/spendly/src/main/resources/templates/listboot.html
@@ -10,7 +10,7 @@
     <!-- Navbar -->
     <nav class="bg-gray-900 text-white shadow-md py-4">
         <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-            <a th:href="@{/}" class="inline-block">
+            <a th:href="@{/dashboard}" class="inline-block">
                 <img th:src="@{/images/logo.png}" alt="Spendly Logo" class="h-12 w-auto object-contain"/>
             </a>
             <div class="hidden md:flex space-x-6">
